--- a/giF0S_Project/Pages/Pre_Catch.html
+++ b/giF0S_Project/Pages/Pre_Catch.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../Styles/PreCatch/preCatch.css">
+    <link href="https://fonts.googleapis.com/css?family=Chakra+Petch&display=swap" rel="stylesheet">
     <title>giF0S Project</title>
 </head>
 
@@ -55,7 +56,7 @@
         </div>
     </div>
     <div id="suggestions">
-        <input id="suggest" type="text" name="we_suggest_you" placeholder="&nbsp;&nbsp;Mis Guifos:" size="32">
+        <input id="myGuifos" type="text" name="we_suggest_you" placeholder="Mis Guifos" size="32">
     </div>
 </body>
 
