Saving new changes about the restructure over the HTML structure and its respective styles in the index and its two themes

--- a/giF0S_Project/Index.html
+++ b/giF0S_Project/Index.html
@@ -22,6 +22,7 @@
                 <!-- SECTION IMAGE LOGO AND BUTTONS TO SELECT THEME -->
                 <div id="buttonZone">
                     <img id="logotipe" src="./Images/gifOF_logo.png" alt="Logo blu Gifos">
+                    <img  class="darkLogo" src="./Images/gifOF_logo_dark.png" alt="logo Pink Gifos">
                     <div>
                     <button id="buttonOne"><a href="./Pages/Pre_Catch.html">Crear Guifos</a></button>
                     <button id="buttonTwo">
