--- a/giF0S_Project/Index.html
+++ b/giF0S_Project/Index.html
@@ -27,7 +27,7 @@
                     <button id="buttonOne"><a href="./Pages/Pre_Catch.html">Crear Guifos</a></button>
                     <button id="buttonTwo">
                         <div id="buttonChooseTheme">Elegir Tema</div>
-                        <div id="dropDown"><img src="./Images/dropdown.svg" alt=""></div>
+                        <div id="dropDown"><img src="./Images/dropdown.svg" alt="dropDownImage"></div>
                         <ul id="menuThemes">
                             <li class="day" onclick="lightThemeCall()">
                                 Sailor Day
