Saving changes about functionalities with the charge bar

--- a/giF0S_Project/Pages/Pre_Catch.html
+++ b/giF0S_Project/Pages/Pre_Catch.html
@@ -58,6 +58,9 @@
     <div id="suggestions">
         <input id="myGuifos" type="text" name="we_suggest_you" placeholder="Mis Guifos" size="32">
     </div>
+    <div id="containerGifs">        
+    </div>
+    <script src="../Scripts/Pages/preCatch.js"></script>
 </body>
 
 </html>
