--- a/giF0S_Project/Pages/Catch.html
+++ b/giF0S_Project/Pages/Catch.html
@@ -28,6 +28,12 @@
                 <div id="uploadingGif">
                     <img id="globe" src="../Images/globe_img.png" alt="globeImage">
                     Estamos subiendo tu guifo…
+                    <div id="uploading">
+                        <span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span>
+                        <span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span>
+                        <div id="pinkBar">
+                        </div>
+                    </div>
                 </div>
             </div>
             <div id="post">
@@ -43,10 +49,13 @@
                     00 00 00 00
                 </div>
                 <button type="button" id="play">
-
-                </button>                                
-                <progress value=0 max=100 id="bar" class="barStyle">
-                    </progress>
+                </button>
+                <div id="charging">
+                    <span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span>
+                    <span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span>
+                    <div id="pinksCharge">
+                    </div>
+                </div>
                 <button type="button" id="stopButton" disabled>
                     <div id="buttonTwo">
                         <img src="../Images/recording.svg" alt="camera_Image">
@@ -64,11 +73,11 @@
                 <button type="button" id="cancel">
                     Cancelar
                 </button>
-            </div>            
+            </div>
         </div>
     </div>
     <script src="https://www.WebRTC-Experiment.com/RecordRTC.js"></script>
-    <script src="../Scripts/Pages/Catch.js" type="text/javascript"></script>
+    <script src="../Scripts/Pages/catch.js" type="text/javascript"></script>
 </body>
 
 </html>
