Saving changes in functions like show my uploaded gifs, and all menus managed in the procees to upload a gif

--- a/giF0S_Project/Index.html
+++ b/giF0S_Project/Index.html
@@ -37,7 +37,7 @@
                             </li>
                         </ul>
                     </button>
-                    <a href="">
+                    <a href="./Pages/Pre_Catch.html">
                         <p id="linkMyGifos"><ins>M</ins>is Guifos
                         </p>
                     </a>
