--- a/giF0S_Project/Pages/Catch.html
+++ b/giF0S_Project/Pages/Catch.html
@@ -36,6 +36,11 @@
                     </div>
                 </div>
             </div>
+            <div id="contentFinal">
+                <p>Guifo creado con éxito</p>
+                <button>Copiar Enlace Guifo</button>
+                <button>Descargar Guifo</button>
+            </div>
             <div id="post">
                 <button type="button" id="catchButton">
                     <div id="cameraButton">
