Chnages over the index js

--- a/giF0S_Project/Pages/Catch.html
+++ b/giF0S_Project/Pages/Catch.html
@@ -38,8 +38,8 @@
             </div>
             <div id="contentFinal">
                 <p>Guifo creado con éxito</p>
-                <button>Copiar Enlace Guifo</button>
-                <button>Descargar Guifo</button>
+                <button id="copy">Copiar Enlace Guifo</button>
+                <button id="download">Descargar Guifo</button>
             </div>
             <div id="post">
                 <button type="button" id="catchButton">
