--- a/giF0S_Project/Index.html
+++ b/giF0S_Project/Index.html
@@ -68,6 +68,8 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <div id="buttonsContainer">
             </div>            
             <!--SECTION SUGGESTIONS -->
             <div id="suggestions">
@@ -184,6 +186,7 @@
         </div>
     </div>
     <script type="text/javascript" src="./Scripts/index.js"></script>
+    <script type="text/javascript" src="./Scripts/createButtons.js"></script>
 </body>
 
 </html>
