--- a/giF0S_Project/Index.html
+++ b/giF0S_Project/Index.html
@@ -24,7 +24,7 @@
                     <img id="logotipe" src="./Images/gifOF_logo.png" alt="Logo blu Gifos">
                     <img  class="darkLogo" src="./Images/gifOF_logo_dark.png" alt="logo Pink Gifos">
                     <div>
-                    <button id="buttonOne"><a href="./Pages/Pre_Catch.html">Crear Guifos</a></button>
+                    <button id="buttonOne">Crear Guifos</button>
                     <button id="buttonTwo">
                         <div id="buttonChooseTheme">Elegir Tema</div>
                         <div id="dropDown"><img src="./Images/dropdown.svg" alt="dropDownImage"></div>
@@ -49,8 +49,7 @@
                         <h2>Buscar</h2>
                     </div>
                     <div id="formSearch">
-                        <input type="search" id="mySearch" name="mySearch" autocomplete="off"
-                            onsearch="gettingSearchValue()"
+                        <input type="search" id="mySearch" name="mySearch" autocomplete="off"                            
                             placeholder="Busca gifs, hashtags, temas, busca lo que quieras..." size="30">
                         <button id="buttonSearch" type="button">
                             <div id="buttonContent">
@@ -69,7 +68,7 @@
                     </div>
                 </div>
             </div>
-            <div id="buttonsContainer">
+            <div id="buttonsContainer">                
             </div>            
             <!--SECTION SUGGESTIONS -->
             <div id="suggestions">
@@ -95,98 +94,12 @@
             </div>
             <!--SECTION TRENDS  -->
             <div id="trendsSection">
-                <input type="text" id="trends" name="trends" placeholder="Tendencias:" size="32">
-                <div class="trendsCharge">
-                    <div id="gifSuggest5" class="chargeSmall">
-                        <p id="hashtagGif5"></p>
-                    </div>
-                    <div id="gifSuggest6" class="chargeSmall">
-                        <p id="hashtagGif6"></p>
-                    </div>
-                    <div id="gifSuggest7" class="chargeSmall">
-                        <p id="hashtagGif7"></p>
-                    </div>
-                    <div id="gifSuggest8" class="chargeSmall">
-                        <p id="hashtagGif8"></p>
-                    </div>
-                </div>
-                <div class="trendsCharge">
-                    <div id="gifSuggest9" class="bigLeftTrendsCharge">
-                        <p id="hashtagGif9"></p>
-                    </div>
-                    <div id="gifSuggest10" class="chargeSmall">
-                        <p id="hashtagGif10"></p>
-                    </div>
-                    <div id="gifSuggest11" class="chargeSmall">
-                        <p id="hashtagGif11"></p>
-                    </div>
-                </div>
-                <div class="trendsCharge">
-                    <div id="gifSuggest12" class="chargeSmall">
-                        <p id="hashtagGif12"></p>
-                    </div>
-                    <div id="gifSuggest13" class="chargeSmall">
-                        <p id="hashtagGif13"></p>
-                    </div>
-                    <div id="gifSuggest14" class="bigRightTrendsCharge">
-                        <p id="hashtagGif14"></p>
-                    </div>
-                </div>
-                <div class="trendsCharge">
-                    <div id="gifSuggest15" class="chargeSmall">
-                        <p id="hashtagGif15"></p>
-                    </div>
-                    <div id="gifSuggest16" class="chargeSmall">
-                        <p id="hashtagGif16"></p>
-                    </div>
-                    <div id="gifSuggest17" class="chargeSmall">
-                        <p id="hashtagGif17"></p>
-                    </div>
-                    <div id="gifSuggest18" class="chargeSmall">
-                        <p id="hashtagGif18"></p>
-                    </div>
-                </div>
-                <div class="trendsCharge">
-                    <div id="gifSuggest19" class="bigLeftTrendsCharge">
-                        <p id="hashtagGif19"></p>
-                    </div>
-                    <div id="gifSuggest20" class="chargeSmall">
-                        <p id="hashtagGif20"></p>
-                    </div>
-                    <div id="gifSuggest21" class="chargeSmall">
-                        <p id="hashtagGif21"></p>
-                    </div>
-                </div>
-                <div class="trendsCharge">
-                    <div id="gifSuggest22" class="chargeSmall">
-                        <p id="hashtagGif22"></p>
-                    </div>
-                    <div id="gifSuggest23" class="chargeSmall">
-                        <p id="hashtagGif23"></p>
-                    </div>
-                    <div id="gifSuggest24" class="bigRightTrendsCharge">
-                        <p id="hashtagGif24"></p>
-                    </div>
-                </div>
-                <div class="trendsCharge">
-                    <div id="gifSuggest25" class="chargeSmall">
-                        <p id="hashtagGif25"></p>
-                    </div>
-                    <div id="gifSuggest26" class="chargeSmall">
-                        <p id="hashtagGif26"></p>
-                    </div>
-                    <div id="gifSuggest27" class="chargeSmall">
-                        <p id="hashtagGif27"></p>
-                    </div>
-                    <div id="gifSuggest28" class="chargeSmall">
-                        <p id="hashtagGif28"></p>
-                    </div>
-                </div>
-            </div>
+                <input type="text" id="trends" name="trends" placeholder="Tendencias:" size="32">                
         </div>
     </div>
-    <script type="text/javascript" src="./Scripts/index.js"></script>
-    <script type="text/javascript" src="./Scripts/createButtons.js"></script>
+</div>
+    <script src="./Scripts/index.js"></script>
+    <script src="./Scripts/createButtons.js"></script>    
 </body>
 
 </html>
