SAVING THE LAST CHANGES BEFORE TO UPLOAD THE PROJECT

--- a/giF0S_Project/Pages/Pre_Catch.html
+++ b/giF0S_Project/Pages/Pre_Catch.html
@@ -25,7 +25,7 @@
                 Crear Guifos
             </h1>
             <div id="here">
-                <img src="../Images/window img.png" alt="window_Icon">
+                <img src="../Images/window_img.png" alt="window_Icon">
                 <h2>
                     Aquí podrás crear tus propios guifos
                 </h2>
@@ -47,18 +47,18 @@
                 <li>
                     <b>4]</b> Listo para subir y compartir!
                 </li>
-                <p>¿Quieres comenzar a crear tu <b><i>guifo</i></b> ahora?</p>
-                </ol>
-                <div id="buttonsContainer">
-                    <button type="button"><a href="../index.html">Cancelar</a></button>
-                    <button id="start" type="button"><a href="../Pages/Catch.html">Comenzar</a></button>
-                </div>
+            </ul>
+            <p>¿Quieres comenzar a crear tu <b><i>guifo</i></b> ahora?</p>
+            <div id="buttonsContainer">
+                <button id="cancel" type="button">Cancelar</button>
+                <button id="start" type="button">Comenzar</button>
+            </div>
         </div>
     </div>
     <div id="suggestions">
         <input id="myGuifos" type="text" name="we_suggest_you" placeholder="Mis Guifos" size="32">
     </div>
-    <div id="containerGifs">        
+    <div id="containerGifs">
     </div>
     <script src="../Scripts/Pages/preCatch.js"></script>
 </body>
