saving changes about a name of files

--- a/giF0S_Project/Index.html
+++ b/giF0S_Project/Index.html
@@ -8,7 +8,7 @@
     <title>giF0S Project</title>
     <link rel="stylesheet" href="./Styles/index.css">
     <link rel="stylesheet" href="./Styles/IndexSailorDay/sailorDay.css">
-    <link rel="stylesheet" href="/Styles/IndexSailorNight/sailorNight.css">
+    <link rel="stylesheet" href="./Styles/IndexSailorNight/sailorNight.css">
     <link href="https://fonts.googleapis.com/css?family=Chakra+Petch&display=swap" rel="stylesheet">
 </head>
 
@@ -37,7 +37,7 @@
                                 </li>
                             </ul>
                         </button>
-                        <a href="./Pages/Pre_Catch.html">
+                        <a href="./Pages/pre_Catch.html">
                             <p id="linkMyGifos"><ins>M</ins>is Guifos
                             </p>
                         </a>
