--- a/giF0S_Project/Pages/Pre_Catch.html
+++ b/giF0S_Project/Pages/Pre_Catch.html
@@ -16,7 +16,7 @@
         </header>
     </div>
     <div id="buttonZone">
-        <a id="arrowBack" href="../Index.html"><img src="../Images/arrow.svg" alt="arrow_To_Back"></a>
+        <a id="arrowBack" href="../index.html"><img src="../Images/arrow.svg" alt="arrow_To_Back"></a>
         <img id="logotipe" src="../Images/gifOF_logo.png" alt="Logo blu Gifos">
     </div>
     <div id="menuSection">
