--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<!--Begin: Star-Clicks.com HTML Code--><script type='text/javascript' src='https://www.star-clicks.com/secure/ads.php?pid=01618069552309659'></script><!-- End: Star-Clicks.com -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+  <h1>Hello World</h1>
+    <!--Begin: Star-Clicks.com HTML Code--><script type='text/javascript' src='https://www.star-clicks.com/secure/ads.php?pid=01618069552309659'></script><!-- End: Star-Clicks.com -->
+
+</body>
+</html>
+
